test: #5 채팅방 생성 테스트 mockito 적용